--- a/StarWarsApp/Resources/layout/activity_main.xml
+++ b/StarWarsApp/Resources/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,6 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/searchButton" />
+    <Button
+        android:text="Planets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/PlanetsButton" />
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
