--- a/StarWarsApp/Resources/layout/Starships_layout.xml
+++ b/StarWarsApp/Resources/layout/Starships_layout.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
     <TextView
@@ -11,24 +11,11 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:id="@+id/textView1" />
-    <TextView
-        android:text="Text"
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left_horizontal"
-        android:id="@+id/shipView1" />
-    <TextView
-        android:text="Text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:id="@+id/shipView2" />
-    <TextView
-        android:text="Text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:id="@+id/shipView3" />
+        android:layout_height="match_parent"
+        android:id="@+id/starShipsListView" />  
        
-
 </LinearLayout>
