Save notes with database

--- a/FirstForms/FirstForms/FirstForms/NoteEntryPage.xaml
+++ b/FirstForms/FirstForms/FirstForms/NoteEntryPage.xaml
@@ -1,26 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
              x:Class="FirstForms.NoteEntryPage">
+    <ContentPage.Resources>
+            <Style TargetType="Button">
+                 <Setter Property="FontSize" Value="Medium"/>
+                 <Setter Property="BackgroundColor" Value="#660066"/>
+                 <Setter Property="TextColor" Value="Black"/>
+                 <Setter Property="CornerRadius" Value="5"/>
+            </Style>    
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <!-- Place new controls here -->
-            <Editor
+            <Editor 
                 Placeholder="Enter your note"
-                    Text="{Binding Text}"
+                Text="{Binding Text}"
                 HeightRequest="100"/>
-
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-            </Grid>
-            <Button Grid.Column="0" x:Name="SaveButton" Text="Save" Clicked="OnSaveButtonClicked" />
-            <Button Grid.Column="1" x:Name="DeleteButton" Text="Delete" Clicked="OnDeleteButtonClicked" />
+                <Button Grid.Column="0" 
+                        x:Name="SaveButton"
+                        Text="Save" 
+                        Clicked="OnSaveButtonClicked"/>
+                <Button Grid.Column="1"
+                        x:Name="DeleteButton" 
+                        Text="Delete"
+                        Clicked="OnDeleteButtonClicked"/>
+            </Grid>         
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
