--- a/FirstForms/FirstForms/FirstForms/App.xaml
+++ b/FirstForms/FirstForms/FirstForms/App.xaml
@@ -1,11 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
              x:Class="FirstForms.App">
     <Application.Resources>
+        <Thickness x:Key="PageMargin">20</Thickness>
+        <Color x:Key="AppBackgroundColor">Yellow</Color>
+        <Color x:Key="AndroidNavigationBarColor">#2196F3</Color>
+        <Color x:Key="UWPNavigationBarColor">WhiteSmoke</Color>
+        <Color x:Key="AndroidNavigationBarTextColor">White</Color>
+        <Color x:Key="UWPNavigationBarTextColor">Black</Color>
 
+        <Style TargetType="{x:Type NavigationPage}">
+            <Setter Property="BarBackgroundColor"
+                    Value="{OnPlatform Android={StaticResource AndroidNavigationBarColor},
+                        UWP={StaticResource UWPNavigationBarColor}}"/>
+
+            <Setter Property="BarTextColor"
+                    Value="{OnPlatform Android={StaticResource AndroidNavigationBarTextColor},
+                    UWP={StaticResource UWPNavigationBarTextColor}}"/>
+
+        </Style>
+
+        <Style TargetType="{x:Type ContentPage}" ApplyToDerivedTypes="True">
+            <Setter Property="BackgroundColor" Value="{StaticResource AppBackgroundColor}"/>
+        </Style>
     </Application.Resources>
 </Application>
