--- a/FirstForms/FirstForms/FirstForms/MainPage.xaml
+++ b/FirstForms/FirstForms/FirstForms/MainPage.xaml
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
+             xmlns:local="clr-namespace:FirstForms"
              x:Class="FirstForms.MainPage">
 
     <StackLayout>
@@ -11,24 +9,18 @@
         <Label Text="Notes" 
            HorizontalOptions="Center"
                FontAttributes="Bold"/>
-        <Editor x:Name="Editor"
+        <Editor x:Name="editor"
                 Placeholder="Enter your note"
                 HeightRequest="100"/>
-
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" x:Name="SaveButton" Text="Save" Clicked="OnSaveButtonClicked"/>
+            <Button Grid.Column="1" x:Name="DeleteButton" Text="Delete" Clicked="OnDeleteButtonClicked"/>
         </Grid>
-        <Button Grid.Column="0" x:Name="SaveButton" Text="Save" Clicked="OnSaveButtonClicked" />
-        <Button Grid.Column="1" x:Name="DeleteButton" Text="Delete" Clicked="OnDeleteButtonClicked" />
-        <Entry Placeholder="Enter file name" x:Name="FileName"></Entry>
-        <Button Text="Open" Clicked="OnOpenClick"></Button>
-
+        <Entry Placeholder="Enter file name"></Entry>
+        <Button Text="Open"></Button>
     </StackLayout>
-
 </ContentPage>
-
-
-
