--- a/FirstForms/FirstForms/FirstForms/NotesPage.xaml
+++ b/FirstForms/FirstForms/FirstForms/NotesPage.xaml
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
              x:Class="FirstForms.NotesPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="+" Clicked="OnNoteAddedClicked"
-                     Icon="icon.png"/>
+        <ToolbarItem Clicked="OnNoteAddedClicked" 
+                     Icon="icon.png"                    
+                      />
     </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <ListView x:Name="NotesListView"
                   Margin="20"
@@ -18,7 +17,7 @@
                     <TextCell Text="{Binding Text}"
                               Detail="{Binding Date}"/>
                 </DataTemplate>
-            </ListView.ItemTemplate>
+            </ListView.ItemTemplate>    
         </ListView>
     </ContentPage.Content>
 </ContentPage>
