--- a/Register/Register_Login/Register_Login/HomePage.xaml
+++ b/Register/Register_Login/Register_Login/HomePage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DesignTask2.Views.UsersListPage"
+             x:Class="Register_Login.HomePage"
              Title="Home Page">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Logout"  Priority="1" Clicked="MenuItem_OnClicked"/>
