--- a/MvvmTutorial/MvvmTutorial/MvvmTutorial/LanguagesPage.xaml
+++ b/MvvmTutorial/MvvmTutorial/MvvmTutorial/LanguagesPage.xaml
@@ -7,26 +7,16 @@
              x:Class="MvvmTutorial.LanguagesPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label>Languages</Label>
-            <ListView ItemsSource="{Binding Languages}">
+            <Label FontSize="Header">Languages</Label>
+            <ListView ItemsSource="{Binding Languages}"
+                      SelectedItem="{Binding SelectedLangauge}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Grid Padding="10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <Label Grid.Column="1"
-                                       Text="{Binding Name}"/>
-                                <Label Grid.Row="1"
-                                       Grid.Column="1" 
-                                       Text="{Binding ShortName}"/>
-                            </Grid>
+                            <StackLayout>
+                                <Label Text="{Binding Name}"/>
+                                <Label Text="{Binding ShortName}"/>
+                            </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
