--- a/PicturesApp/PicturesApp/PicturesApp/UserPage.xaml
+++ b/PicturesApp/PicturesApp/PicturesApp/UserPage.xaml
@@ -8,10 +8,11 @@
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin">
     <ContentPage.Content>
         <StackLayout>
+            <controls:CircleImage x:Name="ProfilePicture" Source="{Binding ProfilePicturePath}" HeightRequest="160" WidthRequest="160" HorizontalOptions="Center" VerticalOptions="Center" Aspect="AspectFill" BorderColor="Black" BorderThickness="2"></controls:CircleImage>
+            <Button Clicked="ShowPopup" x:Name="ChangePFP" Text="Change Profile Photo" Font="Small" HorizontalOptions="Center" Margin="0, 0, 0, 30"></Button>
             <Label Text="Username" Margin="30, 0, 30 ,0"></Label>
             <Entry x:Name="UserNameEntry" Text="{Binding Name}" Margin="30, 0, 30 ,0" Placeholder="Username"></Entry>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
-<!--<controls:CircleImage x:Name="ProfilePicture"  HeightRequest="160" WidthRequest="160" HorizontalOptions="Center" VerticalOptions="Center"></controls:CircleImage>-->
     
