Change pfp popup / design

--- a/PicturesApp/PicturesApp/PicturesApp/MyTabbedPage.xaml
+++ b/PicturesApp/PicturesApp/PicturesApp/MyTabbedPage.xaml
@@ -10,5 +10,5 @@
              android:TabbedPage.ToolbarPlacement="Bottom">
   <!--Pages can be added as references or inline-->
     <local:MainPage Title="Posts" />
-    <local:UserPage Title="{Binding Name}" />
+    <local:UserPage Title="Profile" />
 </TabbedPage>
