user can change pfp

--- a/PicturesApp/PicturesApp/PicturesApp/PostsPage.xaml
+++ b/PicturesApp/PicturesApp/PicturesApp/PostsPage.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:PicturesApp.ViewModels;assembly=PicturesApp"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              mc:Ignorable="d"
              x:Class="PicturesApp.MainPage">
     <ContentPage.BindingContext>
@@ -17,6 +18,10 @@
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Orientation="Vertical" Margin="20, 0, 20, 20" VerticalOptions="FillAndExpand">
+                                <StackLayout Orientation="Horizontal">
+                                    <controls:CircleImage x:Name="ProfilePicture" Source="{Binding ProfilePicturePath}" Margin="30, 20, 0 ,10" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" VerticalOptions="Center" Aspect="AspectFill" BorderColor="Black" BorderThickness="2"></controls:CircleImage>
+                                    <Label HorizontalOptions="Start" FontAttributes="Bold" FontSize="12" Text="{Binding Name}"/>
+                                </StackLayout>
                                 <Image MinimumHeightRequest="400" Source="{Binding Image}"  Aspect="Fill"></Image>
                                 <StackLayout Orientation="Horizontal">
                                     <Label HorizontalOptions="Start" Text="{Binding Title}"/>
